--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=Relay
+name=ES4A Effect Engine
 version=1.0.0
 author=ES4A, info@es4a.de
 maintainer=ES4A <https://es4a.com>
@@ -6,5 +6,5 @@ sentence=A Library to control effects on digital leds/lamps(ws2812, ...) with es
 paragraph=A Library to control effects on digital leds/lamps(ws2812, ...) with es4a effects.
 url=https://github.com/ES4A/LED-Effect-Engine
 architectures=*
-includes=effectEngine.h
+includes=EffectEngine.h
 license=MIT
